Add complete todo count
Users now can see how many completed todos they have

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="links">
             <button class="cursor-pointer" id="main-todo-btn">On Going</button>
-            <button class="cursor-pointer" id="complete-todo-btn">Complete</button>
+            <button class="cursor-pointer" id="complete-todo-btn" data-content="">Complete</button>
         </div>
     
         <main>
